--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "env-cmd",
+  "name": "env-url",
   "version": "0.0.1",
   "description": "Executes a command using the envs in the provided env file",
   "main": "lib/index.js",
