--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "env-url",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "NodeJS utility to get environment variables from a URL",
   "main": "lib/index.js",
   "bin": {
-    "env-cmd": "bin/env-url.js"
+    "env-url": "bin/env-url.js"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json"
